<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="view.SearchActivity"
    android:background="@color/myColor"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/header"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/searchButton"
            android:ems="10"
            android:hint="@string/searchText"
            android:inputType="text"
            android:textColor="@color/headerTxt"
            android:textColorHint="@color/headerTxt" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="45dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@+id/searchText"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:background="@color/header"
            android:src="@drawable/search"
            android:tint="@color/headerTxt"
            android:visibility="visible" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/premiereButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/premiereButton" />

        <Button
            android:id="@+id/popularButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popularButton" />

        <Button
            android:id="@+id/posterButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/posterButton" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:layout_weight="0.32"
            android:contentDescription="@null"
            android:src="@drawable/image" />

    </RelativeLayout>

</LinearLayout>