<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/header"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="12dp"
            android:background="@color/header"
            android:src="@android:drawable/ic_menu_revert"
            android:tint="@color/headerTxt"
            android:visibility="visible"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/PrefTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/preferencesTxt"
            android:textColor="@color/headerTxt"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/myColor"
        android:orientation="vertical"
        android:paddingLeft="30dp">

        <CheckBox
            android:id="@+id/notificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:checked="true"
            android:text="@string/notificationsSettings"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NetworkText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/network"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/wifiButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@android:drawable/btn_radio"
                    android:buttonTint="@color/colorAccent"
                    android:text="Wifi"
                    android:textColor="@color/colorAccent"
                    android:textSize="12dp" />

                <RadioButton
                    android:id="@+id/anyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@android:drawable/btn_radio"
                    android:buttonTint="@color/colorAccent"
                    android:checked="true"
                    android:text="@string/any"
                    android:textColor="@color/colorAccent"
                    android:textSize="12dp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/updateTime"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/updateTimeBox"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/updateButton" />

            <TextView
                android:id="@+id/updateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/update"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/updateCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/minTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="min"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>